# boss-auto-apply-pyautogui

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
cli_anything/pyautogui/: __init__.py  __main__.py  pyautogui_cli.py
cli_anything/pyautogui/core/: __init__.py  session.py
cli_anything/pyautogui/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/pyautogui/utils/: __init__.py  pyautogui_backend.py
docs/: LEGAL_CHECKLIST.md  PYAUTOGUI_CLI.md
scripts/: install-skill.ps1  install-skill.sh
skills/boss-auto-apply/: SKILL.md
skills/boss-auto-apply/evals/: evals.json
