[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boss-auto-apply-pyautogui"
version = "0.1.0"
description = "A CLI-Anything PyAutoGUI harness plus a Codex skill for user-authorized Boss Zhipin job application automation."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"
authors = [
  { name = "Boss Auto Apply Contributors" }
]
dependencies = [
  "click>=8.0",
  "PyAutoGUI>=0.9.54"
]
keywords = ["cli-anything", "pyautogui", "codex-skill", "boss-zhipin", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: User Interfaces"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
cli-anything-pyautogui = "cli_anything.pyautogui.pyautogui_cli:cli"

[tool.setuptools.packages.find]
include = ["cli_anything.*"]
